# RedditNetwork

./: .gitignore  Readme.md  allocate.py  pyproject.toml  requirements.txt  requrements.txt
Scripts/: FileDownload.py  archive_reader.py  filter_file (copy)22Mar.py  filter_file.py  helper.py  single_file.py  sublist.csv
data/: sublist.csv
data/bulk/: done.csv  list.csv
scripts/: archive_reader.py  bulk.py  compare_hash.cpp  compare_two.cpp  extractor.py  file_download.py  gen_pair.cpp  gen_pairs.py  get_subs.py  hash_convert.cpp  main.py  pairpull.py
utils/: Topsub.py  checksubs.py  graphml_files.csv  merged_graph.graphml  mergegml.py  sorter.py
