[project]
name = "reddit-network-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Shubham Daule",email = "shubhambd@iitbhilai.ac.in"},
    {name = "RV Nayan",email = "ramachandrav@iitbhilai.ac.in"},
    {name = "Adil",email = "mohdadil@iitbhilai.ac.in"},
    {name = "Aayush Kataria",email = "aayushka@iitbhilai.ac.in"}
]
readme = "README.md"
requires-python = ">= 3.10"
dependencies = [
    "networkx (>=3.4.2,<4.0.0)",
    "libtorrent (>=2.0.11,<3.0.0)",
    "zstandard (>=0.23.0,<0.24.0)",
    "pandas (>=2.2.3,<3.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.11.2"
mypy = "^1.15.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
